--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,16 @@ bind-key h select-pane -L
 unbind-key l
 bind-key l select-pane -R
 
+set -ag terminal-overrides ",*:XT@"
+
+### Better Bindings for Splitting ### {{{
+unbind %
+#   bind | split-window -h
+bind h split-window -h
+
+unbind '"'
+#   bind - split-window -v
+bind v split-window -v
 
 set-window-option -g mode-keys vi
 
