Added Karabiner and HHKB remaps file in private.xml to symlink to karabiner

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set -ag terminal-overrides ",*:XT@"
 ### Better Bindings for Splitting ### {{{
 unbind %
 #   bind | split-window -h
-bind h split-window -h
+bind b split-window -h
 
 unbind '"'
 #   bind - split-window -v
